# ODyssey

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: built.html  example.html  how-it-works.html  index.html  styles.css
odyssey/: analysis.py  cache.py  export.py  io_utils.py  pipeline.py  plotting.py
odyssey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sample_data/: example_run1.xlsx  example_run2.xlsx
site/: built.html  example.html  how-it-works.html  index.html  styles.css
tests/: test_analysis.py  test_io.py  test_plot.py
tests/fixtures/: config.json  long_df.csv  results.csv
