[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odyssey"
version = "0.1.0"
description = "ODyssey Growth Curve Workbench"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "plotly",
  "reportlab",
  "streamlit",
]

[tool.setuptools.packages.find]
include = ["odyssey"]
